Update holiday information in yesican.html

--- a/yesican.html
+++ b/yesican.html
@@ -11,7 +11,7 @@
 
   <h1>できる</h1>
 <div class="grid">
-  <div class="card"><h2>配信</h2><p>1530固定時間、火・水は定休日。</p></div>
+  <div class="card"><h2>配信</h2><p>1530固定時間、火・水・木は定休日。</p></div>
   <div class="card"><h2>歌</h2><p>投稿頻度は負けません。リクエストもコラボも大歓迎。</p></div>
   <div class="card"><h2>絵</h2><p>依頼受付中。<br><a href="https://gainenull.org/illustlist">サンプルと予算目安ページ</a></p></div>
   <div class="card"><h2>動画</h2><p>依頼受付中、勉強中ゆえ予算目安のページはありません。</p></div>
