--- a/hospivf.html
+++ b/hospivf.html
@@ -6,66 +6,31 @@
 
 <style>
 body {
-  background-color: #3a3a3a;
-  color: #e8d8df;
-  font-family: "Helvetica Neue", sans-serif;
-  margin: 0;
-}
-
-header {
-  background-color: #2f2f2f;
-  padding: 20px;
-  border-bottom: 1px solid #888;
-}
-
-h1 {
-  margin: 0;
-  font-size: 18px;
-  letter-spacing: 1px;
-}
-
-.container {
-  padding: 40px;
-}
-
-.section {
-  border: 1px solid #888;
-  padding: 20px;
-  margin-bottom: 20px;
+  background-color: #3a3a3a; /* フォールバック */
+  background-image: linear-gradient(
+    to bottom,
+    #3a3a3a 0%,
+    #3a3a3a 30%,
+    #4a363b 70%
+  );
+  color: #e3c1cb;
 }
 
 .section h2 {
-  margin-top: 0;
-  font-size: 16px;
-  color: #f0cdd7;
-}
-
-input, button {
-  padding: 10px;
-  margin-top: 10px;
-  background-color: #444;
-  color: #fff;
-  border: 1px solid #aaa;
-}
-
-button {
-  cursor: pointer;
+  color: #e89aac; /* 見出しはしっかりピンク */
 }
 
 button:hover {
-  background-color: #f0cdd7;
-  color: #333;
+  background-color: #e89aac;
+  color: #2b2b2b;
 }
 
 #message {
-  margin-top: 10px;
-  color: #ffb6c1;
-  font-size: 14px;
+  color: #ff8fa3; /* 反応は少し強めのピンク */
 }
 
-.log {
-  font-size: 13px;
-  color: #aaa;
+header {
+  border-bottom: 1px solid #a06c78; /* うっすらピンク混ぜる */
 }
 </style>
 </head>
