--- a/search.html
+++ b/search.html
@@ -37,42 +37,38 @@
   loadPart("footer", "partials/footer.html");
 
   const PAGES = [
-    { title:"江縫栄市立総合病院（トップ）", url:"main", desc:"病院トップページ。救急から在宅まで。" },
+    { title:"江縫栄市立総合病院", url:"main", desc:"病院トップページ。救急から在宅まで。" },
     { title:"お知らせ", url:"news", desc:"最新のご案内・休診情報。" },
-    { title:"お仕事（依頼受付）", url:"yesican", desc:"依頼受付中のお仕事まとめ。" },
+    { title:"依頼", url:"yesican", desc:"依頼受付中のお仕事まとめ。" },
     { title:"外来案内", url:"hours", desc:"受付時間・外来スケジュール。" },
     { title:"利用規約", url:"terms", desc:"サイト利用規約。" },
     { title:"アクセス", url:"access", desc:"病院へのアクセス・地図。" },
     { title:"お問い合わせ", url:"contact", desc:"お問い合わせフォーム。" },
     { title:"施設概要", url:"overview", desc:"病院の施設概要。" },
     { title:"図書館", url:"library", desc:"院内図書館ページ。" },
-    { title:"関連情報・リンク", url:"links", desc:"関連サイトへのリンク集。" },
+    { title:"リンク", url:"links", desc:"関連サイトへのリンク集。" },
     { title:"インデックスページ", url:"internallink", desc:"江縫栄市立総合病院インデックス。" },
-    { title:"絵（料金・プラン）", url:"illustlist", desc:"イラストの料金・プラン一覧。" },
-    { title:"MIX（料金・プラン）", url:"mixlist", desc:"MIX依頼の料金・プラン一覧。" },
+    { title:"絵", url:"illustlist", desc:"イラストの料金・プラン一覧。" },
+    { title:"MIX", url:"mixlist", desc:"MIX依頼の料金・プラン一覧。" },
     { title:"歌見本", url:"utamihon", desc:"歌の見本・サンプル集。" },
-    { title:"Café Palette", url:"cafepalette", desc:"1階のカフェサイト。" },
-    { title:"かふぇあつめ", url:"cafeatsume", desc:"小さな喫茶店の色見本。" },
-    { title:"Nullatelier", url:"nullatelier", desc:"Nullatelierページ。" },
-    { title:"Fleur de Paix", url:"flepaix", desc:"Fleur de Paix。" },
+    { title:"カフェ", url:"cafepalette", desc:"1階のカフェ。" },
+    { title:"カフェ", url:"flepaix", desc:"Fleur de Paix。" },
     { title:"Le Spectre", url:"lespectre", desc:"未名の色標。" },
-    { title:"がいね・ぬる（韓国語ページ）", url:"krwiki", desc:"가이네 누르。韓国語版ページ。" },
+    { title:"wiki", url:"krwiki", desc:"가이네 누르。韓国語版ページ。" },
     { title:"削除すべき記録", url:"d_archive", desc:"アーカイブ。" },
-    { title:"セキュリティークリアランス（55）", url:"insidemail55", desc:"院内メール。セキュリティークリアランスを確認してください。" },
-    { title:"セキュリティークリアランス（78）", url:"insidemail78", desc:"院内メール。セキュリティークリアランスを確認してください。" },
-    { title:"「箱」簡易接続装置", url:"20230210", desc:"2023年2月10日のページ。" },
-    { title:"江縫栄市立総合病院からのお知らせ（改正）", url:"notice404", desc:"病院からのお知らせ。" },
-    { title:"엔에이 시립 종합병원 알림（개정판）", url:"notice404-k", desc:"韓国語版お知らせ。" },
-    { title:"最悪の消滅", url:"irrtumderwelt", desc:"Irrtum der Welt。" },
-    { title:"The Worst Demise", url:"irrtumderwelt-e", desc:"英語版ページ。" },
-    { title:"이르툼 데어 벨트", url:"irrtumderwelt-k", desc:"韓国語版ページ。" },
-    { title:"探偵Q", url:"meitanteiq", desc:"探偵Qページ。" },
-    { title:"赤い眼", url:"redeyes", desc:"赤い眼のページ。" },
-    { title:"しらせの澪", url:"prebox", desc:"しらせの澪。" },
-    { title:"N/A 英語版インデックス", url:"en-dex", desc:"英語版インデックスページ。" },
-    { title:"N/A 韓国語版インデックス", url:"ko-dex", desc:"韓国語版インデックスページ。" },
-    { title:"SVkHPHfDxRE", url:"SVkHPHfDxRE", desc:"謎のページ。" },
-    { title:"3周年特設ページ", url:"release/index", desc:"AINOS97BIOS Update Utility。3周年特設。" },
+    { title:"記録55", url:"insidemail55", desc:"アーカイブ。" },
+    { title:"記録404", url:"notice404", desc:"アーカイブ。" },
+    { title:"記録404", url:"notice404-k", desc:"アーカイブ。" },
+    { title:"最悪", url:"irrtumderwelt", desc:"アーカイブ。" },
+    { title:"最悪", url:"irrtumderwelt-e", desc:"アーカイブ。" },
+    { title:"最悪", url:"irrtumderwelt-k", desc:"アーカイブ。" },
+    { title:"骵温", url:"meitanteiq", desc:"骵温ページ。" },
+    { title:"赤い眼", url:"redeyes", desc:"赤い眼が内側を見ている。" },
+    { title:"しらせ", url:"prebox", desc:"akashicive。" },
+    { title:"外峯", url:"en-dex", desc:"英語版アーカイブ。" },
+    { title:"外峯", url:"ko-dex", desc:"韓国語版アーカイブ。" },
+    { title:"災厄", url:"SVkHPHfDxRE", desc:"赤い眼が内側を見ている。" },
+    { title:"アップデート", url:"release/index", desc:"AINOS97BIOS Update Utility。3周年特設。" },
     { title:"サイト内検索", url:"search", desc:"サイト内検索ページ。" }
   ];
 
@@ -91,7 +87,7 @@
 
   if (!pass) return;
 
-  if (pass.toLowerCase() === "19971023") {
+  if (pass.toLowerCase() === "akashicive") {
     window.location.href = "https://gainenull.org/hospivf"; // ←ここ自分のURLに変える
   } else {
     alert("読込み失敗、再度お試し下さい");
