Add video links to search.html

--- a/search.html
+++ b/search.html
@@ -53,7 +53,9 @@
     { title:"歌見本", url:"utamihon", desc:"歌の見本・サンプル集。" },
     { title:"カフェ", url:"cafepalette", desc:"1階のカフェ。" },
     { title:"カフェ", url:"flepaix", desc:"Fleur de Paix。" },
-    { title:"Le Spectre", url:"lespectre", desc:"未名の色標。" },
+    { title:"動画", url:"https://youtu.be/gxxHFZWzS3g", desc:"20251233155081350097.mp4" },
+    { title:"動画", url:"https://youtu.be/PLdH7i8ruPY", desc:"2025023010854250475.mp4" },
+    { title:"動画", url:"https://youtu.be/dxfWWPZmtv0", desc:"20240631250472.mp4" },
     { title:"wiki", url:"krwiki", desc:"가이네 누르。韓国語版ページ。" },
     { title:"削除すべき記録", url:"d_archive", desc:"アーカイブ。" },
     { title:"記録55", url:"insidemail55", desc:"アーカイブ。" },
