Update descriptions and titles in search.html

--- a/search.html
+++ b/search.html
@@ -38,7 +38,7 @@
 
   const PAGES = [
     { title:"江縫栄市立総合病院", url:"main", desc:"病院トップページ。救急から在宅まで。" },
-    { title:"お知らせ", url:"news", desc:"最新のご案内・休診情報。" },
+    { title:"お知らせ", url:"news", desc:"最新のご案内・記録情報" },
     { title:"依頼", url:"yesican", desc:"依頼受付中のお仕事まとめ。" },
     { title:"外来案内", url:"hours", desc:"受付時間・外来スケジュール。" },
     { title:"利用規約", url:"terms", desc:"サイト利用規約。" },
@@ -47,29 +47,29 @@
     { title:"施設概要", url:"overview", desc:"病院の施設概要。" },
     { title:"図書館", url:"library", desc:"院内図書館ページ。" },
     { title:"リンク", url:"links", desc:"関連サイトへのリンク集。" },
-    { title:"インデックスページ", url:"internallink", desc:"江縫栄市立総合病院インデックス。" },
+    { title:"外峯", url:"index", desc:"外峯零アーカイブ" },
     { title:"絵", url:"illustlist", desc:"イラストの料金・プラン一覧。" },
     { title:"MIX", url:"mixlist", desc:"MIX依頼の料金・プラン一覧。" },
     { title:"歌見本", url:"utamihon", desc:"歌の見本・サンプル集。" },
     { title:"カフェ", url:"cafepalette", desc:"1階のカフェ。" },
     { title:"カフェ", url:"flepaix", desc:"Fleur de Paix。" },
-    { title:"動画", url:"https://youtu.be/gxxHFZWzS3g", desc:"20251233155081350097.mp4" },
-    { title:"動画", url:"https://youtu.be/PLdH7i8ruPY", desc:"2025023010854250475.mp4" },
-    { title:"動画", url:"https://youtu.be/dxfWWPZmtv0", desc:"20240631250472.mp4" },
+    { title:"動画", url:"https://youtu.be/gxxHFZWzS3g", desc:"2025年12月33日のテレビ録画" },
+    { title:"動画", url:"https://youtu.be/PLdH7i8ruPY", desc:"2025年2月30日の動画記録" },
+    { title:"動画", url:"https://youtu.be/dxfWWPZmtv0", desc:"2024年6月31日の緊急放送記録" },
     { title:"wiki", url:"krwiki", desc:"가이네 누르。韓国語版ページ。" },
-    { title:"削除すべき記録", url:"d_archive", desc:"アーカイブ。" },
-    { title:"記録55", url:"insidemail55", desc:"アーカイブ。" },
-    { title:"記録404", url:"notice404", desc:"アーカイブ。" },
-    { title:"記録404", url:"notice404-k", desc:"アーカイブ。" },
-    { title:"最悪", url:"irrtumderwelt", desc:"アーカイブ。" },
-    { title:"最悪", url:"irrtumderwelt-e", desc:"アーカイブ。" },
-    { title:"最悪", url:"irrtumderwelt-k", desc:"アーカイブ。" },
-    { title:"骵温", url:"meitanteiq", desc:"骵温ページ。" },
-    { title:"赤い眼", url:"redeyes", desc:"赤い眼が内側を見ている。" },
-    { title:"しらせ", url:"prebox", desc:"akashicive。" },
-    { title:"外峯", url:"en-dex", desc:"英語版アーカイブ。" },
-    { title:"外峯", url:"ko-dex", desc:"韓国語版アーカイブ。" },
-    { title:"災厄", url:"SVkHPHfDxRE", desc:"赤い眼が内側を見ている。" },
+    { title:"削除すべき記録", url:"d_archive", desc:"web非公開アーカイブ" },
+    { title:"記録55", url:"insidemail55", desc:"内部メールアーカイブ" },
+    { title:"記録404", url:"notice404", desc:"お知らせアーカイブ" },
+    { title:"記録404", url:"notice404-k", desc:"お知らせアーカイブ" },
+    { title:"最悪", url:"irrtumderwelt", desc:"災厄アーカイブ" },
+    { title:"最悪", url:"irrtumderwelt-e", desc:"災厄アーカイブ" },
+    { title:"最悪", url:"irrtumderwelt-k", desc:"災厄アーカイブ" },
+    { title:"骵温", url:"meitanteiq", desc:"骵温公式まとめページ。" },
+    { title:"赤い眼", url:"redeyes", desc:"赤い眼が内側を見ている" },
+    { title:"しらせ", url:"prebox", desc:"akashicive" },
+    { title:"外峯", url:"en-dex", desc:"外峯零アーカイブ" },
+    { title:"外峯", url:"ko-dex", desc:"外峯零アーカイブ" },
+    { title:"災厄", url:"SVkHPHfDxRE", desc:"赤い眼が内側を見ている" },
     { title:"アップデート", url:"release/index", desc:"AINOS97BIOS Update Utility。3周年特設。" },
     { title:"サイト内検索", url:"search", desc:"サイト内検索ページ。" }
   ];
