--- a/main.html
+++ b/main.html
@@ -41,6 +41,7 @@
   <div class="card"><strong><a href="https://gainenull.org/yesican">お仕事</a></strong><p class="note">依頼受付中のモノまとめ…</p></div>
 </div>
 <div id="footer"></div>
+    <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
