--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 
   
   <div id="footer"></div>
-
+  <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
