--- a/hours.html
+++ b/hours.html
@@ -19,7 +19,7 @@
 </table>
 </div>
   <div id="footer"></div>
-
+  <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
