--- a/yesican.html
+++ b/yesican.html
@@ -20,7 +20,7 @@
   <div class="card"><h2>支援</h2><p><a href="https://null-gaine.fanbox.cc/">コチラ</a>と<a href="https://buymeacoffee.com/gaine.null">コチラ</a>で可能。お気持ちで嬉しいです。</p></div>
 </div>
   <div id="footer"></div>
-
+  <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
