--- a/prebox.html
+++ b/prebox.html
@@ -17,7 +17,7 @@
 </div>
   
   <div id="footer"></div>
-
+  <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
