--- a/news.html
+++ b/news.html
@@ -18,7 +18,7 @@
 </ul>
   
   <div id="footer"></div>
-
+  <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
