--- a/overview.html
+++ b/overview.html
@@ -53,12 +53,12 @@
 
 <section class="panel">
   <h2>お問い合わせ</h2>
-  <p>代表：<a href="mailto:null.rei@proton.me">tellyourworld@hospinfo-enuei-city.org</a>（平日9:00〜18:00）</p>
+  <p>代表：<a href="mailto:null.rei@proton.me">tellyourworld@gainenull.org</a>（平日9:00〜18:00）</p>
 </section>
 
   
   <div id="footer"></div>
-
+  <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
