--- a/search.html
+++ b/search.html
@@ -27,7 +27,7 @@
   </main>
 
   <div id="footer"></div>
-
+  <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
