--- a/terms.html
+++ b/terms.html
@@ -171,7 +171,7 @@
 
   
   <div id="footer"></div>
-
+  <script src="common.js"></script>
   <script>
   async function loadPart(id, file){
     const res = await fetch(file);
