--- a/overview.html
+++ b/overview.html
@@ -10,8 +10,9 @@
   <div id="header"></div>
 <section class="panel">
   <h1>施設概要</h1>
-  <p><strong>江縫栄市立総合病院 / N/A City General Hospital</strong></p>
-  <p>所在地：漆谷県江縫栄市北司零寺2-1-1</p>
+  <p><strong>江縫栄市立総合病院 / N/A City General Hospital</strong><br>
+    所在地：漆谷県江縫栄市北司零寺2-1-1</p>
+ <p><br>当サイトは、【ARG要素】と【外峯零や本世界観に関する情報】を両方とも含んでおります。</p>
 </section>
 
  <section class="panel"> 
@@ -53,7 +54,7 @@
 
 <section class="panel">
   <h2>お問い合わせ</h2>
-  <p>代表：<a href="mailto:null.rei@proton.me">tellyourworld@gainenull.org</a>（平日9:00〜18:00）</p>
+  <p>代表：<a href="mailto:null.rei@proton.me">tellyourworld@gainenull.org</a>（平日9:00〜18:00？）</p>
 </section>
 
   
