--- a/overview.html
+++ b/overview.html
@@ -29,6 +29,7 @@
   <p>2024年4月17日　　steamゲーム【Exanimum: The Silent Call】PR配信<br>
 2024年12月31日　　「歌ってみたメモリーズ2024」企画参加・支援（曲提供：BuzzG様）<br>
 2025年6月28日～7月4日　　「ときぱれ！VOL.14〜VTuberときめきパレード〜」オフライントークショーゲスト<br>
+2025年11月29日～12月7日　　「ときぱれ！VOL.18〜VTuberときめきパレード〜」オフライントークショーゲスト<br>
   </section>
   
 <section class="panel">
