--- a/overview.html
+++ b/overview.html
@@ -10,13 +10,14 @@
   <div id="header"></div>
 <section class="panel">
   <h1>施設概要</h1>
-  <p><strong>江縫栄市立総合病院 / N/A City General Hospital</strong><br>
+  <p><strong>江縫栄市立総合病院――N/A City General Hospital</strong><br><br>
     所在地：漆谷県江縫栄市北司零寺2-1-1</p>
  <p><br>当サイトは、【ARG要素】と【外峯零や本世界観に関する情報】を両方とも含んでおります。</p>
 </section>
 
  <section class="panel"> 
-  <h1>履歴</h1>  
+  <h1>履歴</h1>
+　　<h2>活動履歴</h2>
 <p>2011年12月18日　初投稿～<br>
 <br>
 2022年2月10日　YouTube初配信<br>
