--- a/overview.html
+++ b/overview.html
@@ -24,13 +24,13 @@
 2024年6月21日　2.0モデルお披露目<br>
 2024年11月30日　ユニット【詠花】結成<br>
 2025年1月16日　登録者数1000人達成<br>
-2025年6月9日　資料集【世界の外側：江縫栄市】発売<br></p>
+2025年6月9日　資料集【世界の外側：江縫栄市】発売<br><br></p>
 
   <h2>出演等</h2>
   <p>2024年4月17日　　steamゲーム【Exanimum: The Silent Call】PR配信<br>
 2024年12月31日　　「歌ってみたメモリーズ2024」企画参加・支援（曲提供：BuzzG様）<br>
 2025年6月28日～7月4日　　「ときぱれ！VOL.14〜VTuberときめきパレード〜」オフライントークショーゲスト<br>
-2025年11月29日～12月7日　　「ときぱれ！VOL.18〜VTuberときめきパレード〜」オフライントークショーゲスト<br>
+2025年11月29日～12月7日　　「ときぱれ！VOL.18〜VTuberときめきパレード〜」オフライントークショーゲスト<br><br>
   </section>
   
 <section class="panel">
