--- a/links.html
+++ b/links.html
@@ -12,7 +12,7 @@
   <h2>エンティティー</h2>
 <div class="grid">
   <div class="card"><strong><a href="https://gainenull.org/ytori">ニトリ</a></strong><p class="note">直接助力下さった方々</p></div>
-  <div class="card"><strong><a href="https://gainenull.org/nagamebana">詠花</a></strong><p class="note">詠むモノと詠うモノ</p></div>
+  <div class="card"><strong><a href="https://www.youtube.com/playlist?list=PLWFVInOtF-rQHP-x7U2lWCRC5KJ8fnzCu">詠花</a></strong><p class="note">詠むモノと詠うモノ</p></div>
   <div class="card"><strong><a href="https://gainenull.org/meitanteiq">骵温</a></strong><p class="note">「ていおん」でも「たいおん」でも……</p></div>
 </div>
   
