--- a/prebox.html
+++ b/prebox.html
@@ -13,8 +13,7 @@
 <div class="panel">
   <p>隨ｬ蝗帙?螢√ｒ郢を繋ぐ窓口です。繧ゅ≧蟆代＠荳也阜隕ｳ縺ｫ豐｡鬆ｭ関するご質問などをお受けします。</p><br>
   <a href="https://gainenull.org/20230210">窓口</a>
-  <br>
-</div>
+<div style="height:10px;"></div>
   
   <div id="footer"></div>
   <script src="common.js"></script>
