--- a/prebox.html
+++ b/prebox.html
@@ -9,13 +9,16 @@
 <body>
   <div id="header"></div>
 
-<h1>縺励ｉ縺帙?邂ｱ</h1>
-<div class="panel">
-  <p>隨ｬ蝗帙?螢√ｒ郢を繋ぐ窓口です。繧ゅ≧蟆代＠荳也阜隕ｳ縺ｫ豐｡鬆ｭ関するご質問などをお受けします。</p><br>
-  <a href="https://gainenull.org/20230210">窓口</a>
-  <div style="height:10px;"></div>
-</div>
-  
+<main>
+    <h1>縺励ｉ縺帙?邂ｱ</h1>
+
+    <div class="panel">
+      <p>隨ｬ蝗帙?螢√ｒ郢を繋ぐ窓口です。繧ゅ≧蟆代＠荳也阜隕ｳ縺ｫ豐｡鬆ｭ関するご質問などをお受けします。</p><br>
+      <a href="https://gainenull.org/20230210">窓口</a>
+      <div style="height:10px;"></div>
+    </div>
+  </main>
+
   <div id="footer"></div>
   <script src="common.js"></script>
   <script>
