--- a/utamihon.html
+++ b/utamihon.html
@@ -394,8 +394,9 @@ siGrE<br/>
 ジレンマ<br/>
 白い雪のプリンセスは<br/>
 <a href="https://www.youtube.com/watch?v=2c8sBfRbZcQ">白ノ娘</a><br/>
-<a href="https://www.youtube.com/watch?v=SGFcYc_bawA">神曲</a><br/>
 <a href="https://www.youtube.com/watch?v=prynMOFAlpY">深海少女</a><br/>
+<a href="https://www.youtube.com/watch?v=SGFcYc_bawA">神曲</a><br/>
+<a href="https://www.youtube.com/watch?v=AR26x-b_m5c">新次元の禁じ手</a><br/>
 <a href="https://www.youtube.com/watch?v=agIHeR7P-eI">人造エネミー</a><br/>
 しんでしまうとはなさけない！<br/>
 <a href="https://www.youtube.com/watch?v=K8MWR-Qr8DY">心拍数＃0822</a><br/>
