--- a/utamihon.html
+++ b/utamihon.html
@@ -382,7 +382,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=sJRRLbBeSiY">終点</a><br/>
 <a href="https://www.youtube.com/watch?v=dc3oKBMJy4Q">終点の先が在るとするならば。<br/>
 <a href="https://www.youtube.com/watch?v=nFHSSgZZBwM">終末じゃない</a><br/>
-<a href="https://soundcloud.com/nullificated005/sugasong">シュガーソングとビターステップ<br/>
+<a href="https://www.youtube.com/watch?v=JPmXQHmoX2Y">シュガーソングとビターステップ<br/>
 <a href="https://www.youtube.com/watch?v=c9LpaJWH6iQ">粛清マーチ</a><br/>
 <a href="https://www.youtube.com/watch?v=JMcCrlFaWF4">祝福のメシアとアイの塔</a><br/>
 純愛レンズ<br/>
