--- a/utamihon.html
+++ b/utamihon.html
@@ -577,7 +577,7 @@ siGrE<br/>
 バレリーコ<br/>
 ハロ／ハワユ<br/>
 <a href="https://www.youtube.com/watch?v=opXVOl3udjU">ハローセカイ</a><br/>
-Hello､ 星を数えて<br/>
+<a href="https://soundcloud.com/nullificated005/hoshikazo">Hello､ 星を数えて</a><br/>
 <a href="https://www.youtube.com/watch?v=ahgTu3ql85k">パンこげこげになっちゃった</a><br/>
 <a href="https://www.youtube.com/watch?v=w0bdfm2T5bQ">晩餐歌</a><br/>
 パンダヒーロー<br/>
