--- a/utamihon.html
+++ b/utamihon.html
@@ -385,7 +385,7 @@ siGrE<br/>
 <a href="https://www.youtube.com/watch?v=JPmXQHmoX2Y">シュガーソングとビターステップ<br/>
 <a href="https://www.youtube.com/watch?v=c9LpaJWH6iQ">粛清マーチ</a><br/>
 <a href="https://www.youtube.com/watch?v=JMcCrlFaWF4">祝福のメシアとアイの塔</a><br/>
-純愛レンズ<br/>
+<a href="https://soundcloud.com/nullificated005/lenz">純愛レンズ</a><br/>
 上弦の月<br/>
 <a href="https://www.youtube.com/watch?v=DdoKw_wg1nM">少女ふぜゐ</a><br/>
 <a href="https://www.youtube.com/watch?v=BFg5N4i07H4">少女レイ</a><br/>
