--- a/search.html
+++ b/search.html
@@ -90,7 +90,7 @@
   if (!pass) return;
 
   if (pass.toLowerCase() === "akashicive") {
-    window.location.href = "https://gainenull.org/hospivf"; // ←ここ自分のURLに変える
+    window.location.href = "https://gainenull.org/t-iui"; // ←ここ自分のURLに変える
   } else {
     alert("読込み失敗、再度お試し下さい");
   }
