--- a/t-iui.html
+++ b/t-iui.html
@@ -107,10 +107,10 @@ button:hover {
 function checkPassword() {
   const input = document.getElementById("password").value;
 
-  if (input === "internal55") {
+  if (input === "internalc") {
     document.getElementById("message").innerText = "該当記録を確認しました。";
     setTimeout(() => {
-      window.location.href = "insidemail55.html";
+      window.location.href = "t-archive-c.html";
     }, 800);
   } else {
     document.getElementById("message").innerText = "該当記録なし";
