Update and rename t-archive-c.html to t-archive-c1.html

--- a/t-archive-c1.html
+++ b/t-archive-c1.html
@@ -6,13 +6,15 @@
 <title>Cプロジェクト 内部記録</title>
   <link rel="stylesheet" href="assets/archivestyle.css">
 <body>
+<header>
+  <h1>■ 機密資料 / C-PROJECT INTERNAL RECORD</h1>
+</header>
 
 <div class="container">
 
-  <div class="header">
-    <h1>■ 機密資料</h1>
-    <p>概念核研究計画（通称：Cプロジェクト） / 内部技術記録 抜粋（1992年）</p>
-  </div>
+<div class="section">
+<h2>概念核研究計画（通称：Cプロジェクト）</h2>
+<div class="sub">内部技術記録 抜粋（1992年時点）</div>
 
   <div class="section">
     <h2>0. 概要</h2>
@@ -148,6 +150,7 @@
       <li>外部共有：なし</li>
     </ul>
   </div>
+</div>
 
   <div class="footer">
     <p>本資料は内部限定であり、外部公開は厳禁されている。</p>
