Update and rename t-archive-c2.html to t-archive-c.html

--- a/t-archive-c.html
+++ b/t-archive-c.html
@@ -8,7 +8,7 @@
 <body>
 
 <header>
-  <h1>■ 機密資料 / C-PROJECT INTERNAL RECORD</h1>
+  <h1>■ 機密資料 / 概念核研究計画 C-PROJECT INTERNAL RECORD</h1>
 </header>
 
 <div class="container">
