--- a/t-iui.html
+++ b/t-iui.html
@@ -113,10 +113,16 @@ function checkPassword() {
       window.location.href = "t-archive-c.html";
     }, 800);
 
+  if (input === "projectC2") {
+    document.getElementById("message").innerText = "該当記録を確認しました。";
+    setTimeout(() => {
+      window.location.href = "t-archive-c2.html";
+    }, 800);
+
   if (input === "AIF-S01") {
     document.getElementById("message").innerText = "該当記録を確認しました。";
     setTimeout(() => {
-      window.location.href = "t-archive-aif-s01.html";
+      window.location.href = "t-aif-s01.html";
     }, 800);
 
   if (input === "概念核") {
