--- a/t-aif-s01.html
+++ b/t-aif-s01.html
@@ -77,7 +77,7 @@
   <div class="section">
     <h2>4. 出生結果</h2>
 
-    <p class="log">
+    <p>
       出生年月日：1989年1月7日（昭和64年）<br>
       性別：男
     </p>
@@ -169,8 +169,8 @@
     <h2>10. 最終評価</h2>
 
     <p class="log">
-      失敗例（No Observable Effect）
-　　※該当個体の所在は追跡されていない</p>
+      失敗例（No Observable Effect）<br>
+※該当個体の所在は追跡されていない</p>
   </div>
 
 </div>
