--- a/t-iui.html
+++ b/t-iui.html
@@ -119,10 +119,16 @@ function checkPassword() {
       window.location.href = "t-archive-c2.html";
     }, 800);
 
-  if (input === "AIF-S01") {
+  if (input === "19890107") {
     document.getElementById("message").innerText = "該当記録を確認しました。";
     setTimeout(() => {
       window.location.href = "t-aif-s01.html";
+    }, 800);
+
+  if (input === "19900731") {
+    document.getElementById("message").innerText = "該当記録を確認しました。";
+    setTimeout(() => {
+      window.location.href = "t-aif-h01.html";
     }, 800);
 
   if (input === "概念核") {
