--- a/t-iui.html
+++ b/t-iui.html
@@ -119,6 +119,12 @@ function checkPassword() {
       window.location.href = "t-archive-c2.html";
     }, 800);
 
+  if (input === "projectC3") {
+    document.getElementById("message").innerText = "該当記録を確認しました。";
+    setTimeout(() => {
+      window.location.href = "t-archive-c3.html";
+    }, 800);
+
   if (input === "19890107") {
     document.getElementById("message").innerText = "該当記録を確認しました。";
     setTimeout(() => {
