--- a/t-archive-c.html
+++ b/t-archive-c.html
@@ -11,7 +11,7 @@
   <h1>■ 機密資料 / 概念核研究計画 C-PROJECT INTERNAL RECORD</h1>
 </header>
 
-<div class="container">
+<div class="container paper">
 
 <div class="section">
 <h2>概念核研究計画（通称：Cプロジェクト）</h2>
