--- a/t-cc.html
+++ b/t-cc.html
@@ -12,9 +12,8 @@
   <h1>■ 論文抜粋（試論）</h1>
 </header>
 
-<div class="container">
+<div class="container paper">
 
-  <div class="section">
     <h2>概念的情報構造を有する個体に対する人工授精および細胞再構成技術の適用可能性について</h2>
     <p class="log">※本稿は予備的検討段階における試論であり、正式な研究報告ではない。</p>
 
@@ -28,8 +27,7 @@
 
     <p>
       本研究では、この未同定の情報構造を暫定的に<br>
-      <strong>概念核（Concept Core）</strong><br>
-      と呼称する。
+      <strong>概念核（Concept Core）</strong>と呼称する。
     </p>
 
     <p class="log">
@@ -38,7 +36,7 @@
   </div>
 
 
-  <div class="section">
+
     <h2>1. 概念核仮説と細胞挙動</h2>
 
     <p>一部の細胞群において、以下のような現象が報告されている。</p>
@@ -56,10 +54,7 @@
     <p>
       本稿ではこれらの現象を、細胞内に存在する可能性のある非遺伝的情報構造の影響として暫定的に解釈する。
     </p>
-  </div>
 
-
-  <div class="section">
     <h2>2. 人工授精への適用可能性（仮説）</h2>
 
     <p>
@@ -91,7 +86,6 @@
   </div>
 
 
-  <div class="section">
     <h2>3. 情報構造の同期現象（予備観察）</h2>
 
     <p>培養細胞において、以下の現象が散発的に報告されている。</p>
@@ -109,10 +103,7 @@
     <p>
       仮にこれらの現象が実在する場合、細胞は物理的情報以外の要素を保持している可能性がある。
     </p>
-  </div>
 
-
-  <div class="section">
     <h2>4. 細胞再構成に関する仮説</h2>
 
     <p>
@@ -137,7 +128,6 @@
   </div>
 
 
-  <div class="section">
     <h2>5. 倫理的考察（予備）</h2>
 
     <p>
@@ -160,10 +150,7 @@
     <p>
       この点については、慎重な検討が必要である。
     </p>
-  </div>
 
-
-  <div class="section">
     <h2>結語</h2>
 
     <p>
@@ -181,8 +168,6 @@
     <p class="log">
       ※本研究は、実験段階への移行を前提とするものではない。
     </p>
-
-  </div>
 
 </div>
 
