--- a/t-iui.html
+++ b/t-iui.html
@@ -120,6 +120,8 @@ function checkPassword() {
     go("t-archive-c2.html");
   } else if (input === "projectc3") {
     go("t-archive-c3.html");
+  } else if (input === "ctimeline") {
+    go("t-tlc.html");
   } else if (["006", "20010517", "外峯哉", "sotominehajime"].includes(input)) {
     go("t-archive-006.html");
   } else if (input === "19890107") {
