--- a/t-tlc.html
+++ b/t-tlc.html
@@ -81,8 +81,7 @@
   <h2>■ 付記（機密）</h2>
 
   <p class="log">
-    1988年および1989年の個体は、<br>
-    本計画における「対照群（Control）」として扱う。
+    1988年および1989年の個体は、本計画における「対照群（Control）」として扱う。
   </p>
 
   <p class="log">
