--- a/main.html
+++ b/main.html
@@ -20,8 +20,8 @@
 
 
 <section class="panel">
-  <h1>静かに、確かに、回復へ。</h1>
-  <p class="note">救急から在宅まで。江縫栄の“昼”と“夜”をつなぐ総合病院です。</p>
+  <h1>救急から在宅まで。</h1>
+  <p class="note">江縫栄の“昼”と“夜”をつなぐ総合病院です。</p>
   <div class="searchbox" role="search">
     <input id="q" type="search" placeholder="サイト内を検索" aria-label="検索語">
     <a class="btn" href="#" onclick="go()">検索</a>
