--- a/main.html
+++ b/main.html
@@ -29,14 +29,14 @@
   <script>function go(){const v=document.getElementById('q').value;location.href='search.html?q='+encodeURIComponent(v)}</script>
  <div style="margin-top:12px; margin-bottom:12px;">
     <span class="badge"><a href="https://gainenull.org/release">3周年特設</a></span>
-    <span class="badge">オンライン面会</span>
+    <span class="badge">逕滉ｽ捺ュ蝣ｱ蜀肴ｧ狗ｯ臥?皮ｩｶ謇?</span>
     <span class="badge">24時間救急</span>
   </div>
 </section>
 
 <h2>よく使うページ</h2>
 <div class="grid">
-  <div class="card"><strong><a href="https://yukinotachimai.booth.pm/items/7026821">世界解体新書</a></strong><p class="note">世界取扱説明書の販売サイトへ直行します。沢山気になっている「内側のひとたち」のために。</p></div>
+  <div class="card"><strong><a href="https://yukinotachimai.booth.pm/items/7026821">世界解体新書</a></strong><p class="note">世界取扱説明書の販売サイトへ直行します。</p></div>
   <div class="card"><strong><a href="https://gainenull.org/cafepalette">カフェ・パレット</a></strong><p class="note">1階のカフェサイトに繋ぎます。</p></div>
   <div class="card"><strong><a href="https://gainenull.org/yesican">お仕事</a></strong><p class="note">依頼受付中のモノまとめ…</p></div>
 </div>
