--- a/access.html
+++ b/access.html
@@ -106,8 +106,8 @@
 
       <div class="access-text">
         <p><strong>住所：漆谷県江縫栄市北司零寺2-1-1</strong></p>
-        <p>「江縫栄市立総合病院前」駅徒歩2分。駐車場200台。</p>
-        <p>
+        <p>「江縫栄市立総合病院前」駅徒歩2分。駐車場200台。讎ょｿｵ譬ｸから1次元。</p>
+　　　　　<p>
           カフェ「Café Palette」江縫栄市立総合病院店。
           <a href="https://gainenull.org/cafepalette">URL</a>
         </p>
