--- a/t-iui.html
+++ b/t-iui.html
@@ -97,7 +97,7 @@ button:hover {
     <div class="log">
       ・外部アクセス履歴あり<br>
       ・不明な参照パターンを検出<br>
-      ・該当データの再照合を推奨
+      ・<a href="https://gainenull.org/t-use">該当データの再照合を推奨</a>
     </div>
   </div>
 
