--- a/search.html
+++ b/search.html
@@ -82,20 +82,31 @@
 // 特定ワードで裏ルート
 function checkInput(raw){
 
+  const cleaned = raw.toLowerCase().trim();
+
   const keywords = [
     "再構築",
     "概念核",
-    "Cプロジェクト",
+    "cプロジェクト",
     "研究"
   ];
 
-  if (keywords.some(k => raw.includes(k))) {
+  if (keywords.some(k => cleaned.includes(k.toLowerCase()))) {
     triggerHiddenAccess();
-    return;
   }
-
 }
 
+function triggerHiddenAccess(){
+  const pass = prompt("ACCESS RESTRICTED\nPASSWORD:");
+
+  if (!pass) return;
+
+  if (pass.toLowerCase() === "akashicive") {
+    window.location.href = "https://gainenull.org/t-iui";
+  } else {
+    alert("読込み失敗、再度お試し下さい");
+  }
+}
 function triggerHiddenAccess(){
   const pass = prompt("ACCESS RESTRICTED\nPASSWORD:");
 
