--- a/search.html
+++ b/search.html
@@ -66,7 +66,7 @@
     { title:"最悪", url:"irrtumderwelt-k", desc:"災厄アーカイブ" },
     { title:"骵温", url:"meitanteiq", desc:"骵温公式まとめページ。" },
     { title:"赤い眼", url:"redeyes", desc:"赤い眼が内側を見ている" },
-    { title:"しらせ", url:"prebox", desc:"akashicive" },
+    { title:"しらせ", url:"prebox", desc:"akashive" },
     { title:"外峯", url:"en-dex", desc:"外峯零アーカイブ" },
     { title:"外峯", url:"ko-dex", desc:"外峯零アーカイブ" },
     { title:"災厄", url:"SVkHPHfDxRE", desc:"赤い眼が内側を見ている" },
@@ -90,7 +90,7 @@
 
   if (!pass) return;
 
-  if (pass.toLowerCase() === "akashicive") {
+  if (pass.toLowerCase() === "akashive") {
     window.location.href = "https://gainenull.org/t-iui"; // ←ここ自分のURLに変える
   } else {
     alert("読込み失敗、再度お試し下さい");
