--- a/access.html
+++ b/access.html
@@ -107,10 +107,7 @@
       <div class="access-text">
         <p><strong>住所：漆谷県江縫栄市北司零寺2-1-1</strong></p>
         <p>「江縫栄市立総合病院前」駅徒歩2分。駐車場200台。讎ょｿｵ譬ｸから1次元。</p>
-　　　　　<p>
-          カフェ「Café Palette」江縫栄市立総合病院店。
-          <a href="https://gainenull.org/cafepalette">URL</a>
-        </p>
+　　　　　<p>カフェ「Café Palette」江縫栄市立総合病院店。 <a href="https://gainenull.org/cafepalette">URL</a></p>
 　　<p>　</p>
         <p>動画 → <a href="https://youtube.com/@gaine_0/">Youtube</a>　　　SNS → <a href="https://twitter.com/gaine_0/">Twitter</a></p>
         <p>掲示板 → <a href="https://null-gaine.fanbox.cc/">Fanbox</a>　　　購買 → <a href="https://yukinotachimai.booth.pm/">Booth</a></p>
