--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
   <li><a href="https://gainenull.org/d_archive">蜀??縺ｮ縺溘ａ縺ｮ縺雁?ｱ縺帙〒縺吶</a></li>
   <li><a href="https://gainenull.org/notice404">四月馬鹿のお報せ（2023年版）</a></li>
   <li><a href="https://gainenull.org/irrtumderwelt">譛?謔ｪ縺ｮ轣ｽ蜴?</a></li>
-  <li><a href="https://gainenull.org/insidemail55">プロジェクトCと実験エッセ</a></li>
+  <li><a href="https://gainenull.org/insidemail55">プロジェクトCと「蝎ｨ」螳滄ｨ</a></li>
 </ul>
   
   <div id="footer"></div>
