--- a/links.html
+++ b/links.html
@@ -9,9 +9,9 @@
 <body>
   <div id="header"></div>
   
-  <h2>エンティティー</h2>
+  <h1>エンティティー</h1>
 <div class="grid">
-  <div class="card"><strong><a href="https://gainenull.org/ytori">ニトリ</a></strong><p class="note">直接助力下さった方々</p></div>
+  <div class="card"><strong><a href="https://gainenull.org/ytori">ご協力</a></strong><p class="note">直接助力下さった方々</p></div>
   <div class="card"><strong><a href="https://www.youtube.com/playlist?list=PLWFVInOtF-rQHP-x7U2lWCRC5KJ8fnzCu">詠花</a></strong><p class="note">詠むモノと詠うモノ</p></div>
   <div class="card"><strong><a href="https://gainenull.org/meitanteiq">骵温</a></strong><p class="note">「ていおん」でも「たいおん」でも……</p></div>
 </div>
